--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html {
 
 body {
   box-sizing: border-box;
-  background-color: #192a56;
+  background-color: #f4efd8;
   font-family: "Source Code Pro", monospace; }
 
 ::selection {
@@ -24,15 +24,16 @@ body {
   display: flex;
   justify-content: center;
   width: 100%;
-  padding: 8rem 0;
+  padding: 5rem 0;
   position: relative;
   border-bottom: 2px solid white;
   background-color: #1d2129;
-  z-index: -1;
-  font-family: "Indie Flower", cursive; }
+  z-index: -1; }
   .header__main {
-    font-size: 5rem;
-    color: #fff; }
+    font-family: "Amatic SC", cursive;
+    font-size: 6rem;
+    letter-spacing: 10px;
+    color: #f4efd8; }
 
 .main {
   display: flex;
@@ -42,16 +43,55 @@ body {
   .main .form {
     display: flex;
     flex-direction: column; }
+    .main .form .form__container {
+      padding: 2rem 2rem 1rem 2rem;
+      text-align: center;
+      width: 100%;
+      height: 100%; }
     .main .form__label {
-      color: white;
-      font-size: 2rem;
+      color: #1d2129;
+      font-size: 3rem;
       width: 100%; }
     .main .form__input {
-      width: 100%; }
+      margin-top: 2rem;
+      width: 40%;
+      font-size: 2rem;
+      padding: 1rem;
+      border-radius: 5px;
+      border: 2px solid #1d2129;
+      background-color: #f4efd8; }
+      .main .form__input:focus {
+        outline: none; }
+      .main .form__input:active {
+        background-color: #f4efd8; }
+    .main .form__submit {
+      display: flex;
+      width: 35%;
+      height: 3.5rem;
+      justify-content: center;
+      margin: 0 auto;
+      border: 2px solid #1d2129;
+      background-color: #f4efd8;
+      border-radius: 10px;
+      font-size: 2rem;
+      font-family: "Source Code Pro", monospace;
+      font-weight: 700; }
+      .main .form__submit:focus {
+        outline: none; }
   .main .card {
     padding-top: 3rem;
-    color: #fff;
-    font-size: 2rem; }
+    color: #f4efd8;
+    font-size: 2rem;
+    transition: .5s; }
+  .main .table {
+    border: 1px solid white;
+    background-color: #1d2129;
+    opacity: 0; }
+    .main .table tbody tr th {
+      text-align: left;
+      padding: 1rem 1rem; }
+    .main .table tbody tr td {
+      padding: 1rem 4rem; }
 
 .background {
   position: absolute;
@@ -60,3 +100,39 @@ body {
   left: 0;
   right: 0;
   z-index: -1; }
+
+.slideToLeft {
+  animation: slideToLeft .8s ease; }
+
+.slideFromLeft {
+  animation: slideFromLeft .8s ease; }
+
+.slideToRight {
+  animation: slideToRight .8s ease; }
+
+.slideFromRight {
+  animation: slideFromRight .8s ease; }
+
+@keyframes slideToLeft {
+  0% {
+    transform: translateX(0rem); }
+  100% {
+    transform: translateX(-1000rem); } }
+
+@keyframes slideFromLeft {
+  0% {
+    transform: translateX(-1000rem); }
+  100% {
+    transform: translateX(0rem); } }
+
+@keyframes slideFromRight {
+  0% {
+    transform: translateX(900rem); }
+  100% {
+    transform: translateX(0rem); } }
+
+@keyframes slideToRight {
+  0% {
+    transform: translateX(0rem); }
+  100% {
+    transform: translateX(900rem); } }
