--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,9 +5,14 @@
 @import url('https://fonts.googleapis.com/css?family=Amatic+SC:400,700&subset=latin-ext'); 
 
 // Vars
+// Diff fonts
 $font-main-1: 'Indie Flower', cursive;
 $font-main-2: 'Amatic SC', cursive;
 $font-main-3: 'Source Code Pro', monospace;
+
+// Colors
+$color-creamy: rgb(244, 239, 216);
+$color-gray-blue: #487eb0;
 
 *,
 *::after,
@@ -24,12 +29,12 @@ html {
 
 body {
     box-sizing: border-box;
-    background-color: #192a56;
+    background-color: $color-creamy;
     font-family: $font-main-3;
 }
 
 ::selection {
-    background-color: #487eb0;
+    background-color: $color-gray-blue;
     color: white;
 }
 
@@ -39,16 +44,18 @@ body {
     display: flex;
     justify-content: center;
     width: 100%;
-    padding: 8rem 0;
+    padding: 5rem 0;
     position: relative;
     border-bottom: 2px solid white;
     background-color: #1d2129;
     z-index: -1;
-    font-family: $font-main-1;
+    
 
     &__main {
-        font-size: 5rem;
-        color: #fff;
+        font-family: $font-main-2;
+        font-size: 6rem;
+        letter-spacing: 10px;
+        color: $color-creamy;
     }
 }
 
@@ -60,29 +67,87 @@ body {
    align-items: center;
    flex-direction: column;
 
-   .form {
+    .form {
         display: flex;
         flex-direction: column;
+        // animation: dissapearLeft 1s ease;
+
+        .form__container {
+            padding: 2rem 2rem 1rem 2rem;
+            text-align: center;
+            width: 100%;
+            height: 100%;
+        }
 
         &__label {
-            color: white;
-            font-size: 2rem;
+            color: #1d2129;
+            font-size: 3rem;
             width: 100%;
         }
 
         &__input {
-            width: 100%;
+            margin-top: 2rem;
+            width: 40%;
+            font-size: 2rem;
+            padding: 1rem;
+            border-radius: 5px;
+            border: 2px solid #1d2129; 
+            background-color: $color-creamy;
+
+            &:focus {
+                outline: none;
+            }
+
+            &:active {
+                background-color: $color-creamy;
+            }
+        }
+
+        &__submit {
+            display: flex;
+            width: 35%;
+            height: 3.5rem;
+            justify-content: center;
+            margin: 0 auto;
+            border: 2px solid #1d2129;
+            background-color: $color-creamy;
+            border-radius: 10px;
+            font-size: 2rem;
+            font-family: $font-main-3;
+            font-weight: 700;
+
+
+            &:focus {
+                outline: none;
+            }
         }
     }
 
     .card {
         padding-top: 3rem;
-        color: #fff;
+        color: $color-creamy;
         font-size: 2rem;
+        transition: .5s;
     }
 
     .table {
-        
+        border: 1px solid white;
+        background-color: #1d2129;
+        opacity: 0;
+        tbody {
+            
+            tr {
+                
+                th {
+                    text-align: left;
+                    padding: 1rem 1rem;
+                }
+
+                td {
+                    padding: 1rem 4rem;
+                }
+            }
+        }
     }
 }
 
@@ -96,3 +161,66 @@ body {
     right: 0;
     z-index: -1;
 }
+
+
+// ANIMATION CLASSES
+.slideToLeft {
+    animation: slideToLeft .8s ease;
+}
+
+.slideFromLeft {
+    animation: slideFromLeft .8s ease;
+}
+
+.slideToRight {
+    animation: slideToRight .8s ease;
+}
+
+.slideFromRight {
+    animation: slideFromRight .8s ease;
+}
+
+
+
+// ***** @keyframes animation *****
+
+@keyframes slideToLeft {
+    0% {
+        transform: translateX(0rem)
+    }
+
+    100% {
+        transform: translateX(-1000rem);
+    }
+}
+
+@keyframes slideFromLeft {
+    0% {
+        transform: translateX(-1000rem)
+    }
+
+    100% {
+        transform: translateX(0rem);
+    }
+}
+
+@keyframes slideFromRight {
+    0% {
+        transform: translateX(900rem)
+    }
+
+    100% {
+        transform: translateX(0rem);
+    }
+}
+
+@keyframes slideToRight {
+    0% {
+        transform: translateX(0rem)
+    }
+
+    100% {
+        transform: translateX(900rem);
+    }
+}
+
